--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header>
+      <button type="button">sidebar</button>
       <h1>To-Dos</h1>
+      <input type="text" id="search-bar" placeholder="Search Todo..." />
     </header>
   </body>
 </html>
