Feat: add html barebone and create createDomElem module for create elements dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,24 @@
       <h1>To-Dos</h1>
       <input type="text" id="search-bar" placeholder="Search Todo..." />
     </header>
+    <main>
+      <aside id="sidebar">
+        <div id="sidebar-header">
+          <button type="button" id="add-project">Add new project</button>
+          <button type="button" id="clear-all-projects">Clear All</button>
+        </div>
+        <input type="text" id="new-project-name" placeholder="Project name" />
+        <ul id="project-list"></ul>
+      </aside>
+      <section>
+        <div id="todo-header">
+          <h2 id="project-name"></h2>
+          <button type="button" id="add-todo">Add Todo</button>
+          <button type="button" id="clear-all-todos">Clear All</button>
+        </div>
+        <ul id="todo-list"></ul>
+      </section>
+    </main>
   </body>
+  <footer>&copy 2023 Tiffany Chan</footer>
 </html>
