--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
     </header>
     <main>
       <aside id="sidebar">
-        <div id="sidebar-header">
+        <header id="sidebar-header">
           <button type="button" id="add-project">Add new project</button>
           <button type="button" id="clear-all-projects">Clear All</button>
-        </div>
+        </header>
         <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
         <ul id="project-list"></ul>
       </aside>
       <section id="project-container">
-        <div id="todo-header">
+        <header id="todo-header">
           <h2 id="project-name"></h2>
           <button type="button" id="add-todo">Add Todo</button>
           <button type="button" id="clear-all-todos">Clear All</button>
           <button type="button" id="show-completed">Show Completed</button>
-        </div>
+        </header>
         <ul id="todo-list"></ul>
       </section>
     </main>
