Feat and refactor: create form to create new project and use args to replace arguments

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
           <button type="button" id="add-project">Add new project</button>
           <button type="button" id="clear-all-projects">Clear All</button>
         </header>
+        <form id="new-project-form" action="">
+          <label for="name">Project name: </label>
+          <input type="text" id="project-name" />
+          <button type="submit" id="add-proj-btn">Add</button>
+        </form>
         <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
         <ul id="project-list"></ul>
       </aside>
