Feat and refactor: add project event listener, merge btn-control and display-control, and add refreshTodo()

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <input type="text" id="search-bar" placeholder="Search Todo..." />
     </header>
     <main>
-      <aside id="sidebar">
-        <header id="sidebar-header">
+      <aside id="project-container">
+        <header id="project-header">
           <button type="button" id="add-project">Add new project</button>
           <button type="button" id="clear-all-projects">Clear All</button>
         </header>
@@ -26,7 +26,7 @@
         <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
         <ul id="project-list"></ul>
       </aside>
-      <section id="project-container">
+      <section id="todo-container">
         <header id="todo-header">
           <h2 id="project-name"></h2>
           <button type="button" id="add-todo">Add Todo</button>
