Feat: add event listener to add project btn
When add project btn is clicked, the add project form is shown and the value of the name field is emptied. The form disappears once the user submit the form.

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,13 @@
         <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
         <ul id="project-list"></ul>
         <form id="new-project-form" action="">
+          <h2>Add Project</h2>
           <label for="name">Project name: </label>
           <input type="text" id="project-name" />
           <button type="submit" id="add-proj-btn">Add</button>
         </form>
-        <form id="edit-projects" action="">
+        <form id="edit-project-form" action="">
+          <h2>Edit Project</h2>
           <label for="new-project-name">Name</label>
           <input type="text" id="new-project-name" />
           <button type="submit" id="edit-proj-btn">Confirm</button>
