Refactor: merge add project form and edit project form

--- a/src/index.html
+++ b/src/index.html
@@ -20,18 +20,18 @@
         </header>
         <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
         <ul id="project-list"></ul>
-        <form id="new-project-form" action="">
-          <h2>Add Project</h2>
+        <form id="project-form" action="">
+          <h2>Project</h2>
           <label for="name">Project name: </label>
           <input type="text" id="project-name" />
-          <button type="submit" id="add-proj-btn">Add</button>
+          <button type="submit" id="submit-proj-btn">Add</button>
         </form>
-        <form id="edit-project-form" action="">
+        <!-- <form id="edit-project-form" action="">
           <h2>Edit Project</h2>
           <label for="new-project-name">Name</label>
           <input type="text" id="new-project-name" />
           <button type="submit" id="edit-proj-btn">Confirm</button>
-        </form>
+        </form> -->
       </aside>
       <section id="todo-container">
         <header id="todo-header">
