Feat and refactor: add event listeners to edit todo btn and add edit mode to todo form, and make project/todo id in the class the same as the DOM element id

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
           <input type="date" id="todo-date" />
           <label for="todo-priority">Priority: </label>
           <select id="todo-priority">
+            <option value="none" selected>None</option>
             <option value="low">!</option>
             <option value="medium">!!</option>
             <option value="high">!!!</option>
