Feat: modify todo priority and date
Add None as the default option to priority. Set today's date as the default date. Fix the value of priority so that it will correctly show in the input field.

--- a/src/index.html
+++ b/src/index.html
@@ -44,10 +44,10 @@
           <input type="date" id="todo-date" />
           <label for="todo-priority">Priority: </label>
           <select id="todo-priority">
-            <option value="none" selected>None</option>
-            <option value="low">!</option>
-            <option value="medium">!!</option>
-            <option value="high">!!!</option>
+            <option value="None" selected>None</option>
+            <option value="!">!</option>
+            <option value="!!">!!</option>
+            <option value="!!!">!!!</option>
           </select>
           <button type="submit" id="submit-todo-btn">Confirm</button>
         </form>
