--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <button type="button">sidebar</button>
+      <button type="button" id="sidebar-btn">sidebar</button>
       <h1>TODOs</h1>
       <input type="text" id="search-bar" placeholder="Search Todo..." />
     </header>
