Feat: update current project name displayed inside todo-container

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,12 @@
       </aside>
       <section id="todo-container">
         <header id="todo-header">
-          <h2 id="project-name"></h2>
-          <button type="button" id="add-todo">Add Todo</button>
-          <button type="button" id="clear-all-todos">Clear All</button>
-          <button type="button" id="show-completed">Show Completed</button>
+          <h2 id="current-project-name"></h2>
+          <div id="todo-main-btns">
+            <button type="button" id="add-todo">Add Todo</button>
+            <button type="button" id="clear-all-todos">Clear All</button>
+            <button type="button" id="show-completed">Show Completed</button>
+          </div>
         </header>
         <ul id="todo-list"></ul>
         <form id="todo-form">
