Feat: add search function
Whenever user types in the search bar, a dropdown menu will appear and list every todo of which the title contains the string in the search bar. The dropdown menu will disppears if the user clicks outside of the search container.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     <header>
       <button type="button" id="sidebar-btn">sidebar</button>
       <h1>TODOs</h1>
-      <input type="text" id="search-bar" placeholder="Search Todo..." />
+      <div id="search-container">
+        <input type="text" id="search-bar" placeholder="Search Todo..." />
+        <div id="dropdown-menu"></div>
+      </div>
     </header>
     <main>
       <aside id="project-container">
