--- a/src/index.html
+++ b/src/index.html
@@ -7,63 +7,68 @@
     <title>TODOs</title>
   </head>
   <body>
-    <header>
-      <button type="button" id="sidebar-btn">sidebar</button>
-      <h1>TODOs</h1>
-      <div id="search-container">
-        <input type="text" id="search-bar" placeholder="Search Todo..." />
-        <div id="dropdown-menu"></div>
-      </div>
-    </header>
     <main>
-      <aside id="project-container">
-        <header id="project-header">
-          <button type="button" id="add-project">Add new project</button>
-          <button type="button" id="clear-all-projects">Clear All</button>
-        </header>
-        <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
-        <ul id="project-list"></ul>
-        <form id="project-form" action="">
-          <h2>Project</h2>
-          <label for="project-name">Project name: </label>
-          <input type="text" id="project-name" />
-          <div id="project-form-btns">
-            <button type="cancel" id="cancel-proj-btn">Cancel</button>
-            <button type="submit" id="submit-proj-btn">Confirm</button>
-          </div>
-        </form>
+      <aside id="sidebar" class="open">
+          <header id="project-btns-container">
+            <button type="button" id="sidebar-btn">sidebar</button>
+            <button type="button" id="add-project">Add</button>
+            <button type="button" id="clear-all-projects">Clear</button>
+          </header>
+          <section id="project-container">
+            <div class="line"></div>
+          <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
+            <ul id="project-list"></ul>
+            <form id="project-form" action="">
+              <h2>Project</h2>
+              <label for="project-name">Project name: </label>
+              <input type="text" id="project-name" />
+              <div id="project-form-btns">
+                <button type="cancel" id="cancel-proj-btn">Cancel</button>
+                <button type="submit" id="submit-proj-btn">Confirm</button>
+              </div>
+          </section>
+          </form>
       </aside>
-      <section id="todo-container">
-        <header id="todo-header">
-          <h2 id="current-project-name"></h2>
-          <div id="todo-main-btns">
-            <button type="button" id="add-todo">Add Todo</button>
-            <button type="button" id="clear-all-todos">Clear All</button>
-            <button type="button" id="show-completed">Show Completed</button>
+      <section id="content">
+        <header>
+          <h1>TODOs</h1>
+          <div id="search-container">
+            <input type="text" id="search-bar" placeholder="Search Todo..." />
+            <div id="dropdown-menu"></div>
           </div>
         </header>
-        <ul id="todo-list"></ul>
-        <form id="todo-form">
-          <label for="todo-title">Title: </label>
-          <input type="text" id="todo-title" />
-          <label for="todo-desc">Description: </label>
-          <input type="text" id="todo-desc" />
-          <label for="todo-date">Date: </label>
-          <input type="date" id="todo-date" />
-          <label for="todo-priority">Priority: </label>
-          <select id="todo-priority">
-            <option value="None" selected>None</option>
-            <option value="!">!</option>
-            <option value="!!">!!</option>
-            <option value="!!!">!!!</option>
-          </select>
-          <div id="todo-form-btns">
-            <button type="cancel" id="cancel-todo-btn">Cancel</button>
-            <button type="submit" id="submit-todo-btn">Confirm</button>
-          </div>
-        </form>
-      </section>
-    </main>
-  </body>
+        <section id="todo-container">
+          <header id="todo-header">
+            <h2 id="current-project-name"></h2>
+            <div id="todo-main-btns">
+              <button type="button" id="add-todo">Add Todo</button>
+              <button type="button" id="clear-all-todos">Clear All</button>
+              <button type="button" id="show-completed">Show Completed</button>
+            </div>
+          </header>
+          <ul id="todo-list"></ul>
+          <form id="todo-form">
+            <label for="todo-title">Title: </label>
+            <input type="text" id="todo-title" />
+            <label for="todo-desc">Description: </label>
+            <input type="text" id="todo-desc" />
+            <label for="todo-date">Date: </label>
+            <input type="date" id="todo-date" />
+            <label for="todo-priority">Priority: </label>
+            <select id="todo-priority">
+              <option value="None" selected>None</option>
+              <option value="!">!</option>
+              <option value="!!">!!</option>
+              <option value="!!!">!!!</option>
+            </select>
+            <div id="todo-form-btns">
+              <button type="cancel" id="cancel-todo-btn">Cancel</button>
+              <button type="submit" id="submit-todo-btn">Confirm</button>
+            </div>
+          </form>
+        </section>
+    </section>
+  </main>
   <footer>&copy 2023 Tiffany Chan | All rights reserved</footer>
+  </body>
 </html>
