--- a/src/index.html
+++ b/src/index.html
@@ -4,68 +4,87 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TODOs</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>TODO</title>
   </head>
   <body>
     <main>
       <aside id="sidebar" class="open">
           <header id="project-btns-container">
-            <button type="button" id="sidebar-btn">sidebar</button>
-            <button type="button" id="add-project">Add</button>
-            <button type="button" id="clear-all-projects">Clear</button>
+            <button type="button" id="sidebar-btn"><span class="material-symbols-outlined proj-main-icons">
+              menu_open
+              </span></button>
+            <button type="button" id="add-project"><span class="material-symbols-outlined proj-main-icons">
+              add
+              </span></button>
+            <button type="button" id="clear-all-projects"><span class="material-symbols-outlined proj-main-icons">
+              delete
+              </span></button>
           </header>
           <section id="project-container">
-            <div class="line"></div>
           <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
             <ul id="project-list"></ul>
-            <form id="project-form" action="">
-              <h2>Project</h2>
-              <label for="project-name">Project name: </label>
-              <input type="text" id="project-name" />
-              <div id="project-form-btns">
-                <button type="cancel" id="cancel-proj-btn">Cancel</button>
-                <button type="submit" id="submit-proj-btn">Confirm</button>
-              </div>
-          </section>
-          </form>
+            <div id="project-form-overlay">
+              <form id="project-form" action="">
+                <h2>Project</h2>
+                  <input type="text" id="project-name" placeholder="Name"/>
+                <div id="project-form-btns">
+                  <button type="cancel" id="cancel-proj-btn">Cancel</button>
+                  <button type="submit" id="submit-proj-btn">Confirm</button>
+                </div>
+            </section>
+            </form>
+          </div>
       </aside>
       <section id="content">
-        <header>
-          <h1>TODOs</h1>
-          <div id="search-container">
+        <header id="search-container">
             <input type="text" id="search-bar" placeholder="Search Todo..." />
             <div id="dropdown-menu"></div>
-          </div>
         </header>
         <section id="todo-container">
           <header id="todo-header">
-            <h2 id="current-project-name"></h2>
+            <h1 id="current-project-name"></h1>
             <div id="todo-main-btns">
-              <button type="button" id="add-todo">Add Todo</button>
+              <button type="button" id="add-todo">Add</button>
               <button type="button" id="clear-all-todos">Clear All</button>
               <button type="button" id="show-completed">Show Completed</button>
             </div>
           </header>
           <ul id="todo-list"></ul>
-          <form id="todo-form">
-            <label for="todo-title">Title: </label>
-            <input type="text" id="todo-title" />
-            <label for="todo-desc">Description: </label>
-            <input type="text" id="todo-desc" />
-            <label for="todo-date">Date: </label>
-            <input type="date" id="todo-date" />
-            <label for="todo-priority">Priority: </label>
-            <select id="todo-priority">
-              <option value="None" selected>None</option>
-              <option value="!">!</option>
-              <option value="!!">!!</option>
-              <option value="!!!">!!!</option>
-            </select>
-            <div id="todo-form-btns">
-              <button type="cancel" id="cancel-todo-btn">Cancel</button>
-              <button type="submit" id="submit-todo-btn">Confirm</button>
-            </div>
-          </form>
+          <div id="todo-form-overlay">
+            <form id="todo-form">
+              <h2>Todo</h2>
+              <div id="todo-title-input">
+                <label for="todo-title">Title</label>
+                <input type="text" id="todo-title" placeholder="Title"/>
+              </div>
+              <div id="todo-desc-input">
+                <label for="todo-desc">Description</label>
+                <textarea id="todo-desc" placeholder="Description"></textarea>
+              </div>
+              <div id="todo-date-input">
+                <label for="todo-date">Due Date</label>
+                <input type="date" id="todo-date"/>
+              </div>
+              <div id="todo-priority-input">
+                <label for="todo-priority">Priority</label>
+                <select id="todo-priority">
+                  <option value="None" selected>None</option>
+                  <option value="!">!</option>
+                  <option value="!!">!!</option>
+                  <option value="!!!">!!!</option>
+                </select>
+              </div>
+              <div id="todo-form-btns">
+                <button type="cancel" id="cancel-todo-btn">Cancel</button>
+                <button type="submit" id="submit-todo-btn">Confirm</button>
+              </div>
+            </form>
+          </div>
         </section>
     </section>
   </main>
