--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>TODO</title>
   </head>
   <body>
@@ -16,31 +31,37 @@
       <aside id="sidebar" class="open">
         <header>
           <div id="project-btns-container">
-            <button type="button" id="sidebar-btn"><span class="material-symbols-outlined proj-main-icons">
-              menu_open
-              </span></button>
-            <button type="button" id="add-project"><span class="material-symbols-outlined proj-main-icons">
-              add
-              </span></button>
-            <button type="button" id="clear-all-projects"><span class="material-symbols-outlined proj-main-icons">
-              delete
-              </span></button>
-            </div>
-          </header>
-          <section id="project-container">
+            <button type="button" id="sidebar-btn">
+              <span class="material-symbols-outlined proj-main-icons">
+                menu_open
+              </span>
+            </button>
+            <button type="button" id="add-project">
+              <span class="material-symbols-outlined proj-main-icons">
+                add
+              </span>
+            </button>
+            <button type="button" id="clear-all-projects">
+              <span class="material-symbols-outlined proj-main-icons">
+                delete
+              </span>
+            </button>
+          </div>
+        </header>
+        <section id="project-container" class="flex">
           <!-- <input type="text" id="new-project-name" placeholder="Project name" /> -->
-            <ul id="project-list"></ul>
-            <div id="project-form-overlay">
-              <form id="project-form" action="">
-                <h2>Project</h2>
-                  <input type="text" id="project-name" placeholder="Name"/>
-                <div id="project-form-btns">
-                  <button type="cancel" id="cancel-proj-btn">Cancel</button>
-                  <button type="submit" id="submit-proj-btn">Confirm</button>
-                </div>
-              </form>
-            </div>
-          </section>
+          <ul id="project-list"></ul>
+          <div id="project-form-overlay">
+            <form id="project-form" action="">
+              <h2>Project</h2>
+              <input type="text" id="project-name" placeholder="Name" />
+              <div id="project-form-btns">
+                <button type="cancel" id="cancel-proj-btn">Cancel</button>
+                <button type="submit" id="submit-proj-btn">Confirm</button>
+              </div>
+            </form>
+          </div>
+        </section>
       </aside>
       <section id="content">
         <header>
@@ -53,14 +74,26 @@
             <div id="todo-main-btns">
               <button type="button" id="add-todo">Add +</button>
               <select id="sort-menu">
-                <option value="Due Date - Closest First">Due Date - Closest First</option>
-                <option value="Due Date - Furthest First">Due Date - Furthest First</option>
-                <option value="Priority - Lowest First">Priority - Lowest First</option>
-                <option value="Priority - Highest First">Priority - Highest First</option>
+                <option value="Due Date - New to Old">
+                  Due Date - New to Old
+                </option>
+                <option value="Due Date - Old to New">
+                  Due Date - Old to New
+                </option>
+                <option value="Priority - Low to High">
+                  Priority - Low to High
+                </option>
+                <option value="Priority - High to Low">
+                  Priority - High to Low
+                </option>
                 <option value="Title - A to Z">Title - A to Z</option>
                 <option value="Title - Z to A">Title - Z to A</option>
-                <option value="Date Created - Oldest First" selected>Date Created - Oldest First</option>
-                <option value="Date Created - Newest First">Date Created - Newest First</option>
+                <option value="Date Created - Old to New" selected>
+                  Date Created - Old to New
+                </option>
+                <option value="Date Created - New to Old">
+                  Date Created - New to Old
+                </option>
               </select>
               <button type="button" id="sort-todo">Sort</button>
               <button type="button" id="clear-all-todos">Clear All</button>
@@ -75,7 +108,7 @@
               <h2>Todo</h2>
               <div id="todo-title-input">
                 <label for="todo-title">Title</label>
-                <input type="text" id="todo-title" placeholder="Title"/>
+                <input type="text" id="todo-title" placeholder="Title" />
               </div>
               <div id="todo-desc-input">
                 <label for="todo-desc">Description</label>
@@ -83,7 +116,7 @@
               </div>
               <div id="todo-date-input">
                 <label for="todo-date">Due Date</label>
-                <input type="date" id="todo-date"/>
+                <input type="date" id="todo-date" />
               </div>
               <div id="todo-priority-input">
                 <label for="todo-priority">Priority</label>
@@ -101,8 +134,8 @@
             </form>
           </div>
         </section>
-    </section>
-  </main>
-  <footer>&copy 2023 Tiffany Chan | All rights reserved</footer>
+      </section>
+    </main>
+    <footer>&copy 2023 Tiffany Chan | All rights reserved</footer>
   </body>
 </html>
